<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        tools:context=".Activity.SignUpActivity">
    <View
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/bg_gradient2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_logo"
            android:textStyle="bold|italic"
            android:textSize="30sp"
            android:textColor="@color/color_logo1"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="65dp"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_logo"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="35dp"/>


    <LinearLayout
            android:layout_width="340dp"
            android:layout_height="480dp"
            android:background="@drawable/bg_gradient3"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="35dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="30sp"
                android:textColor="@color/text_color1"
                android:textStyle="bold|italic"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="20dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"/>

        <EditText
                android:id="@+id/usernameInput"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:hint="@string/hint_username"
                android:textSize="16sp"
                android:inputType="textPersonName"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="8dp"
                android:paddingLeft="10dp"
                android:textColorHint="@color/text_color3"
                android:textColor="@color/text_color2"
                android:background="@drawable/bg_gradient4"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

        <EditText
                android:id="@+id/passwordInput"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:hint="@string/hint_password"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_pass"
                android:drawablePadding="8dp"
                android:paddingLeft="10dp"
                android:textColorHint="@color/text_color3"
                android:textColor="@color/text_color2"
                android:background="@drawable/bg_gradient4"/>
        <ImageButton
                android:layout_marginTop="5dp"
                android:id="@+id/togglePasswordVisibilityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_hide_pass"/>
    </LinearLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
        <EditText
                android:id="@+id/passwordConfirmInput"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:hint="@string/hint_confirm_password"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_pass"
                android:drawablePadding="8dp"
                android:paddingLeft="10dp"
                android:textColorHint="@color/text_color3"
                android:textColor="@color/text_color2"
                android:background="@drawable/bg_gradient4"/>

        <ImageButton
                android:layout_marginTop="5dp"
                android:id="@+id/togglePasswordVisibilityButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_hide_pass"/>
    </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="35dp"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:enabled="false"
                android:background="@drawable/bg_gradient11"/>


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:textColor="#9E9C9C"/>

            <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/login"
                    android:textSize="16sp"
                    android:textColor="@color/text_color1"
                    android:textStyle="normal"
                    android:textAllCaps="false"
                    android:background="@drawable/bg_transparent"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_transparent2"
            android:visibility="invisible"
            android:id="@+id/loading_layout">
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="350dp"
                android:id="@+id/progressBar"/>
    </RelativeLayout>



</RelativeLayout>