<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_transparent2"
        tools:context=".Activity.DetailNoteActivity">

    <ImageButton
            android:id="@+id/close_btn"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_close2"
            android:background="@drawable/bg_gradient8"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_gradient7">
        <LinearLayout 
                android:layout_width="match_parent" 
                android:layout_height="wrap_content"
        android:orientation="horizontal">
            <ImageView
                    android:id="@+id/note_icon"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_note"
                    android:scaleType="fitCenter"/>
            <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:id="@+id/note_user"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:text="@string/anonymous"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/text_color2"
                />
                <TextView
                        android:id="@+id/note_content"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:text="@string/hint_content"
                        android:textSize="18sp"
                />
            </LinearLayout>
        </LinearLayout>
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bg_gradient9">

            <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_mark"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

            <TextView
                    android:id="@+id/note_location_away"
                    android:layout_marginTop="7dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown"
                    android:textSize="16sp"
                    android:textColor="@color/text_color2"
            />

        </LinearLayout>
        <TextView
                android:id="@+id/note_time_created"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/time_default"
                android:layout_alignParentRight="true"
                android:textSize="16sp"
                android:textColor="@color/text_color2"
        />
    </RelativeLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_btn"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:layout_marginLeft="80dp"
            android:layout_marginBottom="40dp"
            android:text="Delete note"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:visibility="invisible"
            android:background="@drawable/bg_gradient10"/>


</RelativeLayout>